addYourFavouriteToken method modified.